--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@ html, body {
     width: 100%;
     height: 100%;
     margin: 0;
+    background-color: lightgrey;
     padding: 0;
     overflow: hidden;
 }
